Deployment Config: Port 3005 & Domain repairos.in

--- a/nginx_repairos.conf
+++ b/nginx_repairos.conf
@@ -1,7 +1,7 @@
 
 server {
     listen 80;
-    server_name your-domain.com; # Replace with your actual domain/subdomain
+    server_name repairos.in www.repairos.in;
 
     # Frontend (Static Files)
     location / {
@@ -12,7 +12,7 @@ server {
 
     # Backend API (Reverse Proxy)
     location /api {
-        proxy_pass http://localhost:3000;
+        proxy_pass http://localhost:3005;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
