Safety Update: Change domain to parts.repairos.in to avoid conflict

--- a/nginx_repairos.conf
+++ b/nginx_repairos.conf
@@ -1,7 +1,7 @@
 
 server {
     listen 80;
-    server_name repairos.in www.repairos.in;
+    server_name parts.repairos.in;
 
     # Frontend (Static Files)
     location / {
